@@ -2,6 +2,11 @@ require 'padrino-core/support_lite' unless defined?(SupportLite)
 require 'cgi'
 require 'i18n'
 require 'enumerator'
+require 'active_support/core_ext/string/conversions'  # to_date
+require 'active_support/core_ext/float/rounding'      # round
+require 'active_support/option_merger'                # with_options
+require 'active_support/core_ext/object/with_options' # with_options
+require 'active_support/inflector'                    # humanize
 
 FileSet.glob_require('padrino-helpers/**/*.rb', __FILE__)
 
